--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,19 @@
 .read-the-docs {
   color: #888;
 }
+/* .target-for-scroll:: */
+.target-for-scroll::-webkit-scrollbar {
+  width: 0.5em;
+  margin: 0;
+}
+
+.target-for-scroll::-webkit-scrollbar-track {
+  background-color: #f5f5f5;
+  margin: 0;
+}
+
+.target-for-scroll::-webkit-scrollbar-thumb {
+  background-color: #c4c4c4aa;
+  border-radius: 1em;
+  margin: 0;
+}
