--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,20 @@
 .target-for-scroll::-webkit-scrollbar {
   width: 0.5em;
   margin: 0;
+  .target-for-scroll::-webkit-scrollbar {
+  width: 0.5em;
+}
+
+.target-for-scroll::-webkit-scrollbar-track {
+  background-color: #f5f5f5;
+  margin: 0;
+}
+
+.target-for-scroll::-webkit-scrollbar-thumb {
+  background-color: #c4c4c4aa;
+  border-radius: 1em;
+  margin: 0;
+}
 }
 
 .target-for-scroll::-webkit-scrollbar-track {
